<resources>
    <string name="app_name">GIS</string>

    <string name="save_point">Save Point</string>
    <string name="location_not_available">Location is not available</string>
    <string name="go_to_settings">Go to settings</string>
    <string name="request_location_permission">Permission is denied. We need your permission to get your location</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="longitude_abbrev">Long</string>
    <string name="latitude_abbrev">Lat</string>
    <string name="point_name">Point Name</string>
    <string name="type">Type</string>
    <string name="ruin">Ruin</string>
    <string name="castel">Castel</string>
    <string name="wall">Wall</string>
    <string name="historic_site">Historic Site</string>
    <string name="archeologic_site">Archeologic Site</string>
    <string name="other_type">Other Type</string>
    <string name="add_note">Add Note</string>
    <string name="note">Note</string>

    <string name="next">Next</string>
    <string name="save">Save</string>

    <string name="map">Map</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>