<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/big_margin">

    <TextView
        android:id="@+id/name_longitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/longitude_abbrev"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name_latitude"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/latitude_abbrev"
        android:textAlignment="textEnd"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/name_longitude" />

    <EditText
        android:id="@+id/point_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:hint="@string/point_name"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_latitude" />

    <Button
        android:id="@+id/button_name_next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/big_margin"
        android:text="@string/next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/point_name" />

</androidx.constraintlayout.widget.ConstraintLayout>