<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/details_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/details_point_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/point_name"
        android:layout_margin="@dimen/margin"
        app:layout_constraintTop_toBottomOf="@+id/details_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/details_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/type"
        android:gravity="end"
        app:layout_constraintTop_toBottomOf="@+id/details_point_name" />

    <TextView
        android:id="@+id/details_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:text="@string/note"
        app:layout_constraintTop_toBottomOf="@+id/details_type"/>

</androidx.constraintlayout.widget.ConstraintLayout>